syntax = "proto3";

package raketa;

option go_package = "github.com/vanyaio/raketa-backend/proto;raketapb";

import "google/api/annotations.proto";

service RaketaService {
    // SignUp user
    rpc SignUp(RegisterRequest) returns (RegisterResponse) {
        option (google.api.http) = {
            post: "/sign-up"
            body: "*"
        };
    };
    rpc CreateTask(CreateRequest) returns (CreateResponse) {
        option (google.api.http) = {
            post: "/create"
            body: "*"
        };
    };
    rpc DeleteTask(DeleteRequest) returns (DeleteResponse) {
        option (google.api.http) = {
            delete: "/delete"
        };
    };
    rpc AssignWorker(AssignRequest) returns (AssignResponse) {
        option (google.api.http) = {
            patch: "/assign"
            body: "*"
        };
    };
    rpc CloseTask(CloseRequest) returns (CloseResponse) {
        option (google.api.http) = {
            patch: "/close"
            body: "*"
        };
    };
    rpc GetOpenTasks(GetRequest) returns (GetResponse) {
        option (google.api.http) = {
            get: "/tasks"
        };
    };
}

// SignUp request
message RegisterRequest {
    int64 id = 1;
}
// SignUp response
message RegisterResponse {}

// CreateTask request
message CreateRequest {
    string url = 1;
}
// CreateTask response
message CreateResponse {
    string url = 1;
}

// DeleteTask request
message DeleteRequest {
    string url = 1;
}
// DeleteTask response
message DeleteResponse {
    string message = 1;
}

// AssignWorker request
message AssignRequest {
    string url = 1;
    int64 user_id = 2;
}
// AssignWorker response
message AssignResponse {
    string message = 1;
}

// CloseTask request
message CloseRequest {
    string url = 1;
}
// CloseTask response
message CloseResponse {
    string message = 1;
}

// GetOpenTasks request
message GetRequest {}
// GetOpenTasks response
message GetResponse {
    repeated Task tasks = 1;
}

message Task {

    // enum Status {
    //     OPEN = 0;
    //     CLOSED = 1;
    //     DECLINED = 2;
    // }

    string url = 1;
    int64 user_id = 2;
    string status = 3;
}